# navix

./: pyproject.toml  readme.md
navix/: __init__.py  app_router.py  cli.py  component_system.py  exceptions.py  page_builder.py  route_handler.py  utils.py
